<resources>
    <string name="app_name">KunciKu</string>
    <string name="verificationText">Masukan code verifikasi yang telak kami kirim melalu SMS ke nomor yang kamu daftarkan </string>
    <string name="main_tv1">Mau pergi dengan aman tanpa khawatir lupa mengunci pintu, atau bahkan takut kehilangan kunci-mu? KUNCIKUin aja!</string>
    <string name="main_tv2">Selamat datang di aplikasi KUNCIKU!</string>
    <string name="main_tv3">Aplikasi ini di ciptakan untuk mu yang suka datang dan pergi semaumu . Dari situ lah aku terinspirasi supaya kunci kamarku tidak sepertimu :(</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="main_title">"Login"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silahkan_masuk">Silahkan masuk dengan nomor HP-mu yang terdaftar</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="cth_name_email_com">Cth: name@email.com</string>
    <string name="email">Email</string>
    <string name="cth_name">Cth: Name</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="lengkapi_data_dirimu_di_bawah_ini_ya">Lengkapi data dirimu di bawah ini ya</string>
    <string name="tunggu_sebentar">Tunggu Sebentar</string>
    <string name="kirim">KIRIM</string>
</resources>
