<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/lengkapi_data_dirimu_di_bawah_ini_ya"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                style="@style/login_form_text"
                android:text="@string/nama_lengkap" />

            <EditText
                android:id="@+id/reg_Name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:textSize="15sp"
                android:ems="10"
                android:hint="@string/cth_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                style="@style/login_form_text"
                android:text="@string/email" />

            <EditText
                android:id="@+id/reg_Mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="15sp"
                android:ems="10"
                android:hint="@string/cth_name_email_com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView5"
                style="@style/login_form_text"
                android:text="@string/nomor_hp" />
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/reg_phoneCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/phone_btn_style"
                    android:layout_marginTop="5dp"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccpDialog_showFastScroller="false"
                    app:ccpDialog_showNameCode="false"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_countryPreference="ID,SG"
                    app:ccp_defaultLanguage="INDONESIA"
                    app:ccp_rememberLastSelection="true"
                    app:ccp_showArrow="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="12sp"/>
                <EditText
                    android:id="@+id/reg_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/nomor_hp"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>