<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageIcon"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kunciku" />
        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bottom"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView6"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/homeimage"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo"
                android:text="@string/main_tv2"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_tv1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:layout_marginEnd="8dp"
                    android:id="@+id/main_loginBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_btn"
                    android:text="@string/masuk"
                    android:textColor="#fff"
                    android:typeface="monospace"/>
                <Button
                    android:layout_marginStart="8dp"
                    android:id="@+id/main_regBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_btn"
                    android:text="@string/daftar"
                    android:textColor="#fff"
                    android:typeface="monospace"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_f_icon"
                android:id="@+id/fb_button"
                android:background="@drawable/blue_border_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/continue_with_facebook"
                android:enabled="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/main_tv3"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>